@@ -1,3 +1,10 @@
+2008-09-05  Ben Van Mechelen  <ben@benvm.be>
+
+	* aclocal.m4:
+	* data/garmon.schemas:
+	    Added all present gconf keys to the schema file
+	    
+
 2008-09-05  Ben Van Mechelen  <me@benvm.be>
 
 	* garmon/obd_device.py:
